--- a/docs/index.css
+++ b/docs/index.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    overflow: hidden;
 }
 
 #wrapper {
@@ -56,7 +57,8 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 3px;
+    height: 3vh;
     width: 0;
     background: red;
+    transition: width 250ms ease-in-out;
 }
