--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
     background: #000000b7;
     display: inline-flex;
     flex-direction: row;
+    overflow: hidden;
 }
 
 #right {
@@ -34,7 +35,7 @@ body {
 #left img {
     height: 85vh;
     width: 85vh;
-    margin: 0 0 0 5px;
+    margin: 0 0 0 7.5vh;
 }
 
 #title, #author {
